overflow fix

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ header .languages_list a{
 main{
     width: 100%;
     height: 90vh;
+    min-height: 63rem;
     min-width: 32rem;
     display: flex;
     flex-direction: column;
@@ -63,6 +64,7 @@ main .title_presentation-container{
     background-position: center;
     background-repeat: no-repeat;
     margin-bottom: 2rem;
+    overflow: scroll;
     
 
     
